Fri Feb  1 22:33:11 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a bug in hash table internal routine for traversing
	  the table with foreach callback.  The current entry may
	  become invalid in the callback but it was referenced after
	  the callback returned.

	  Do not allow auto rehashing of hash table during the
	  silc_hash_table_foreach operation, for same reasons as it is
	  not allowed for SilcHashTableList.  Affected files are
	  lib/silcutil/silchashtable.[ch].

Fri Feb  1 14:55:00 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Defined DLLAPI into silcincludes.h and silcwin32.h for
	  Win32 DLL.  extern's in header files are now declared with
	  DLLAPI.

Thu Jan 31 23:34:33 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed private message handling.  It used some old code that
	  caused the client to crash.  Affecte file is
	  lib/silcclient/client_prvmsg.c.

Thu Jan 31 19:06:22 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added function silc_client_add_channel, 
	  silc_client_replace_channel_id, and removed functions
	  silc_client_new_channel_id and silc_idlist_get_channel_by_id
	  from client library.

	* Added cross reference of the joined channels to the 
	  SilcClientEntry, and changed the SilcChannelEntry's
	  users list to SilcHashTable.  The affected files are
	  lib/silcclient/idlist.[ch].

	* Fixed a bug in hash table tarversing.  While the hash table
	  is traversed with SilcHashTableList the table must not be
	  rehashed.  It is now guaranteed that auto rehashable tables
	  are not rehashed while tarversing the list.  Also defined that
	  silc_hash_table_rehash must not be called while tarversing
	  the table.  Added function silc_hash_table_list_reset that must
	  be called after the tarversing is over.  The affected files are
	  lib/silcutil/silchashtable.[ch].

	* Changed all hash table traversing to call the new
	  silc_hash_table_list_reset in server and in client library.
